Give message box a fixed height and set overflow to scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,9 +71,12 @@ ul {
 /* Specialized */
 .messages {
   padding: 3.2rem 6.4rem;
+  margin-bottom: 3.2rem;
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
+  overflow-y: scroll;
+  height: 90vh;
 }
 
 .message {
